<resources>
    <string name="app_name">NYT news</string>
    <string name="photo">Photo</string>
    <string name="description">I am functional and object-oriented programmer with almost twenty years of experience. I love to solve complex problems and study new things in the world of computers/programming.</string>
    <string name="phd_text">P.h.d. in CAM</string>
    <string name="text_1c_worker">1C: Corporate performance management</string>
    <string name="top_ten_stepik">Enter top ten on stepik.org</string>
    <string name="enter_a_message">Enter a message…</string>
    <string name="send_message">SEND MESSAGE</string>
    <string name="copyright">© 2018 Maksim Khlystov</string>
    <string name="no_email">Email program not found</string>
    <string name="url_telegram" translatable="false">https://t.me/max1c</string>
    <string name="url_github" translatable="false">https://github.com/MaxHlystov</string>
    <string name="url_linkedin" translatable="false">https://linkedin.com/pub/maxim-khlystov/a7/6ba/123</string>
    <string name="greeting">Hello!</string>
    <string name="no_browser_error">You haven\'t browser to show a link</string>
    <string name="about_menu_item">About</string>
    <string name="activity_about__my_name">Maksim Khlystov</string>
    <string name="news_image">News image</string>
    <string name="main_menu__get_online_news">Get online news</string>
    <string name="share_link">Share link</string>
    <string name="news_list_activity__adapter_set_error">Error in news draw!</string>
    <string name="activity_news_list__reload">reload</string>
    <string name="activity_news_list__error_loading_message">An error occurred while news loading! Try to reload news.</string>
    <string name="activity_intro__welcome">Welcome!</string>
    <string name="activity_news_detailes_layout__error_loading_message">Error to load the article!</string>
    <string name="main_menu__edit">Edit news</string>
    <string name="detailed_news_menu__delete">Delete news</string>
    <string name="activity_news_detailes_layout__error_delete_article">Error to delete article.</string>
    <string name="detailed_news_menu__save_news">Save news</string>
    <string name="news_detailes_activity__error_saving_article">Error saving article. Try once again.</string>
    <string name="activity_edit_news__author">Author</string>
    <string name="activity_edit_news__title">Title</string>
    <string name="activity_edit_news__description">Description</string>
    <string name="activity_edit_news__content">Content</string>
    <string name="activity_edit_news__published">Published at</string>
    <string name="activity_news_details__article_saved">Changed were saved.</string>
    <string name="news_list_fragment__error_loading_news">Error in news getting</string>
    <string name="update_db_service__notification_title">NY Times</string>
    <string name="update_db_service__news_updating">News updating...</string>
    <string name="update_db_service__stop">Stop</string>
    <string name="update_db_service__news_updated_successfully">News has been successfully updated!</string>
    <string name="update_db_service__error_news_update">Error news update.</string>
    <string name="update_db_service__notifications_channel_name">NYT news update notifications</string>
    <string name="update_db_service__notifications_channel_descr">The channel for update news notifications.</string>
</resources>
