<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/key_start_margin"
        android:layout_marginEnd="@dimen/half_margin">


        <LinearLayout
            android:id="@+id/key_info_line1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/half_margin"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/key_icon_size"
                android:layout_height="@dimen/key_icon_size"
                android:layout_marginEnd="@dimen/key_end_margin"
                android:contentDescription="@string/photo"
                android:src="@drawable/ic_baseline_school" />

            <TextView
                android:id="@+id/key_info1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phd_text"
                android:textSize="@dimen/normal_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/key_info_line2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/key_info_line1"
            android:layout_margin="@dimen/half_margin"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/key_icon_size"
                android:layout_height="@dimen/key_icon_size"
                android:layout_marginEnd="@dimen/key_end_margin"
                android:contentDescription="@string/photo"
                android:src="@drawable/stepik_logo" />

            <TextView
                android:id="@+id/key_info2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_ten_stepik"
                android:textSize="@dimen/normal_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/key_info_line3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/key_info_line2"
            android:layout_margin="@dimen/half_margin"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/key_icon_size"
                android:layout_height="@dimen/key_icon_size"
                android:layout_marginEnd="@dimen/key_end_margin"
                android:contentDescription="@string/photo"
                android:src="@drawable/ic_1c_companylogo" />

            <TextView
                android:id="@+id/key_info3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_1c_worker"
                android:textSize="@dimen/normal_text_size" />
        </LinearLayout>

        <View
            android:id="@+id/descr_top_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/thin_line"
            android:layout_below="@id/key_info_line3"
            android:layout_margin="@dimen/half_margin"
            android:background="@color/red" />

        <TextView
            android:id="@+id/descr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/descr_top_line"
            android:layout_margin="@dimen/half_margin"
            android:text="@string/description"
            android:textSize="@dimen/normal_text_size" />

        <View
            android:id="@+id/descr_bottom_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/thick_line"
            android:layout_below="@id/descr"
            android:layout_margin="@dimen/half_margin"
            android:background="@color/red" />

        <EditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/descr"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/half_margin"
            android:autofillHints="@string/greeting"
            android:hint="@string/enter_a_message"
            android:lines="1"
            android:textSize="@dimen/normal_text_size" />

        <Button
            android:id="@+id/btn_send_message"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/message"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/half_margin"
            android:text="@string/send_message"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:textSize="@dimen/normal_text_size" />

        <LinearLayout
            android:id="@+id/social"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_send_message"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/half_margin"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/telega"
                android:layout_width="@dimen/my_portfolio__icon_size"
                android:layout_height="@dimen/my_portfolio__icon_size"
                android:contentDescription="@string/url_telegram"
                android:padding="@dimen/half_margin"
                android:src="@drawable/ic_telegram_app" />

            <ImageView
                android:id="@+id/linkedin"
                android:layout_width="@dimen/my_portfolio__icon_size"
                android:layout_height="@dimen/my_portfolio__icon_size"
                android:contentDescription="@string/url_linkedin"
                android:padding="@dimen/half_margin"
                android:src="@drawable/ic_linkedin" />

            <ImageView
                android:id="@+id/github"
                android:layout_width="@dimen/my_portfolio__icon_size"
                android:layout_height="@dimen/my_portfolio__icon_size"
                android:contentDescription="@string/url_github"
                android:padding="@dimen/half_margin"
                android:src="@drawable/ic_github" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
